--- a/TechknowNotion-Revised.ipynb
+++ b/TechknowNotion-Revised.ipynb
@@ -6,6 +6,7 @@
       "name": "Welcome To Colaboratory",
       "provenance": [],
       "collapsed_sections": [],
+      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,9 +31,9 @@
         "id": "6NXm7OnXQs9M",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 336
+          "height": 244
         },
-        "outputId": "5b525bbc-4033-4f17-fd03-7380e27fe481"
+        "outputId": "f6e31fbd-c60b-4e00-aef7-1e22c49f67fe"
       },
       "source": [
         "import os, csv, io, sys\n",
@@ -205,7 +206,7 @@
         "            \n",
         "            p.try_again('View module again?', 'Invalid input.', 2)\n",
         "        else:\n",
-        "            print(\"\\tNo completed module yet\")\n",
+        "            print(\"\\t\\tNo completed module yet\")\n",
         "            p.try_again('View module again?', 'Invalid input.', 2)\n",
         "    elif choice == 2:                                                       # all module\n",
         "        clear()\n",
@@ -216,7 +217,7 @@
         "            p.iteration('all_modules.csv')\n",
         "            p.try_again('View module again?', 'Invalid input.', 2)\n",
         "        else:\n",
-        "            print(\"\\tNo module yet\")\n",
+        "            print(\"\\t\\t     No module yet\")\n",
         "            p.try_again('View module again?', 'Invalid input.', 2)\n",
         "    elif choice == 3:\n",
         "        main()\n",
@@ -271,7 +272,7 @@
         "\n",
         "            p.try_again('Go back to schedule module?', 'Invalid input.', 3)\n",
         "        else:\n",
-        "            print(\"\\t Queue is empty\")\n",
+        "            print(\"\\t\\t Queue is empty\")\n",
         "            p.restart()\n",
         "    elif choice == 2:\n",
         "        main()\n",
@@ -327,7 +328,7 @@
         "                print()\n",
         "                p.iteration('queue.csv')                                    # display updated queue\"\"\"\n",
         "            else:\n",
-        "                print(\"Queue is empty\")\n",
+        "                print(\"\\t\\tQueue is empty\")\n",
         "        elif choice == 0:\n",
         "            p.restart()\n",
         "        p.try_again('Get a module again?', 'Invalid input.', 4)\n",
@@ -364,21 +365,17 @@
         "make_csv_files()\n",
         "main()"
       ],
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "\tTECHKNOW'S NOTION\n",
+            "\t\t    GET A MODULE\n",
             "\n",
-            "1. Input Module Details\n",
-            "2. View Modules\n",
-            "3. Schedule Modules\n",
-            "4. Get a Module\n",
-            "5. Exit\n",
+            "\t\tQueue is empty\n",
             "\n",
-            "Please enter a number: 5\n"
+            "Go back to main menu? YES(1) or NO(0): 0\n"
           ]
         },
         {
